# test_task

./: .gitignore  CMakeLists.txt  build_script.bat  build_script.sh  readme.md
headers/: client.h  club.h  event.h  parser.h  table.h  time.h
include/: client.h  client_state.h  club.h  data_validity_checker.h  desk.h  error.h  error_handler.h  event.h  output_handler.h  parsed_event.h  parser.h  simulation.h  simulation_metadata.h  table.h  time_struct.h
source/: client.cpp  club.cpp
src/: client.cpp  client_state.cpp  club.cpp  data_validity_checker.cpp  error.cpp  error_handler.cpp  event.cpp  output_handler.cpp  parsed_event.cpp  parser.cpp  scheduler.cpp  simulation.cpp  simulation_metadata.cpp  time_struct.cpp
tests/: CMakeLists.txt  club_test.cpp  data_validity_tests.cpp  output_handler_tests.cpp  parser_test.cpp  simulation_test.cpp
tests/test_files/: valid_input2  valid_input3  valid_input4  valid_output2  valid_output3  valid_output4
